--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.2.4",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.0",
     "sequelize-cli": "^6.6.0"
